--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,3 @@
-steps:
-- name: 'gcr.io/$PROJECT_ID/gcloud'
- entrypoint: 'compute'
- args:
- - instances
- - list
-
+isteps:
+- name: 'ubuntu'
+  args: ['echo', 'hello world']
