--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-- name: 'ubuntu'
-  args: ['echo', 'hello world']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['compute', 'instances','list']
